--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lucide-react": "^0.563.0",
     "@google/genai": "^1.39.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
